[package]
name = "test-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
assert-repo = { git = "https://github.com/test-bin-rs/test-bin-rs.github.io", branch = "assert-repo-wrapped", version = "0.1.0" }
assert-true = { git = "https://github.com/test-bin-rs/test-bin-rs.github.io", branch = "assert-true", version = "0.1.0" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
